Fixed spelling mistake in page 2

--- a/page2.html
+++ b/page2.html
@@ -448,7 +448,7 @@
     const photos = [
         { img: "image/img1.jpeg", text: "You'll forever be my best friend.No one can take your place,not now,not ever." },
         { img: "image/img2.jpeg", text: "Even if I find a thousand friends,none could ever be you" },
-        { img: "image/img3.jpeg", text: "Friendship requires lot of efforts! But here our bod remains same without even a phone call." },
+        { img: "image/img3.jpeg", text: "Friendship requires lot of efforts! But here our bond remains same without even a phone call." },
         { img: "image/img4.jpeg", text: "Distance doesn't matter,you will always hold a special place in my heart..." },
         { img: "image/img5.jpeg", text: "This bond has grown, not faded." }
     ];
